LDAPReplicationDomain.java: Used interfaces instead of concrete classes.